Fixed quotes around the json object in the filter for the message listing.

--- a/source/docs/tools/n2.md
+++ b/source/docs/tools/n2.md
@@ -134,7 +134,7 @@ This is a critical command for debugging and understanding services. It's also u
 
 This shows a list of the messages that your principal has access to see in the log. It takes an optional --filter parameter that is a json object such as:
 
-`> n2 message ls --filter {"type": "heartbeat"}`
+`> n2 message ls --filter '{"type": "heartbeat"}'`
 
 This will filter the list to the messages that match the filter. 
 
