Added Windows details.

--- a/source/docs/tools/n2.md
+++ b/source/docs/tools/n2.md
@@ -136,6 +136,15 @@ This shows a list of the messages that your principal has access to see in the l
 
 `> n2 message ls --filter '{"type": "heartbeat"}'`
 
+```
+Side note, on Windows you need to:
+- use double quotes on the outside 
+- escape the quotes on the inside 
+as follows:
+
+> n2 message ls --filter "{\"type\": \"heartbeat\"}"
+```
+
 This will filter the list to the messages that match the filter. 
 
 The other thing that the message comamnd can do is send a message. This takes a none-optional json object that is the message to send from your principal. 
@@ -143,7 +152,7 @@ The other thing that the message comamnd can do is send a message. This takes a 
 If there is a custom message, put an '_' in front of the message type as follows:
 
 `> n2 message send '{"type": "_custom", "tags":["command:<deviceid>"], `
-`"body": {"var1": "value 1", "var2": "value2"}, "from":"<principalId>", "to":"<deviceId>"}`
+`"body": {"var1": "value 1", "var2": "value2"}, "from":"<principalId>", "to":"<deviceId>"}'`
 
 The from and to parts are optional if it's a message for the log but at present there is not a broadcast message so if you want the message to reach a device, you have to specifically address it to that device. 
 
