--- a/source/docs/tools/n2.md
+++ b/source/docs/tools/n2.md
@@ -1,14 +1,24 @@
 ---
-title: n2 - the command line tool
+title: Command Line Interface
 ---
 
-# About n2
+# Command Line Interface (n2)
 
-n2 is the command line tool that is used for the device side management of Nitrogen. It can be used to create new users, provision devices, connect to a new service and is extremely useful in sending/recieving test messages. 
+n2 is the command line tool that can be used to do command line administration of a Nitrogen service. It can be used to create new users, provision devices, connect to a new service and is extremely useful in sending/recieving test messages.
 
-The n2 tool takes a command and then an arguement or series of arguments. 
+The n2 tool takes a command and then an arguement or series of arguments.
 
-You can accomplish many of these tasks from the web site as well if you login to the admin portal but many times it's more convinient to do them from the command line and/or script them. 
+You can accomplish many of these tasks from the web site as well if you login to the admin portal but many times it's more convinient to do them from the command line and/or script them.
+
+## Installation
+
+`> npm install -g nitrogen-cli`
+
+## Getting Started
+
+You can see the full set of top level commands of the command line tool using:
+
+`> n2 help`
 
 ```
    / | / (_) /__________  ____ ____  ____
@@ -18,24 +28,26 @@ You can accomplish many of these tasks from the web site as well if you login to
                        /____/
 Commands:
 
-apikeys    Manage api keys.                                                     
-app        Manage app installation and execution.                               
-device     Manage devices (alias for principal)                                 
-message    Send and show messages                                               
-permission Manage permissions between principals.                               
-principal  Manage principals (devices, users, ...)                              
-reactor    Manage reactor instances (alias for app)                             
-service    Manage the Nitrogen service you are working with.                    
+apikeys    Manage api keys.
+app        Manage app installation and execution.
+device     Manage devices (alias for principal)
+message    Send and show messages
+permission Manage permissions between principals.
+principal  Manage principals (devices, users, ...)
+reactor    Manage reactor instances (alias for app)
+service    Manage the Nitrogen service you are working with.
 user       Manage users (alias for principal)
 ```
 
+We'll now walk through some of the most common commands:
+
 ## service
 
-The service command allows you to configure which instance of Nitrogen you will connect to and how you connect to it. Once you set your service, it will remain in for that terminal session meaning that it will be where your other n2 commands will operate including anything to do with users, installing apps, messages and so on. 
+The service command allows you to configure which instance of Nitrogen you will connect to and how you connect to it. Once you set your service, it will remain set for that computer (even across terminal sessions).
 
-The first argument to look at is show. 
+The first argument to look at is `show`:
 
-`> n2 service show` 
+`> n2 service show`
 
 ```
 currently using service: api.nitrogen.io
@@ -45,90 +57,88 @@ http_port: 443
 log_levels: warn,error
 ```
 
-This will show you which service you are connected to currently. By default this is "host: api.nitrogen.io". If you want to change it, use the n2 command to 'set' individual properties or 'use' a seperate service profile all together.
-
-If you connect to multiple instances of Nitrogen, the 'service use' will allow you to switch between different service profiles.
+This will show you which service you are connected to currently. By default this is the hosted Nitrogen service at `api.nitrogen.io`. You can change this, or any of the properties, with the 'set' command. The command line tool will retain these settings for this service, so you can set up a set of configs and then switch between them using the 'use' command:
 
 `> n2 service use <service_nickname>`
 
-A service profile consists of a nickname, host, protocol, http_port and log_levels. 
+A service profile consists of a nickname, host, protocol, http_port and log_levels.
 
-For example, you could connect to your local host version with: 
+For example, you could connect to your local host version with:
 
 `> n2 service use localhost`
 
-Or you could set one up to connect to your SSL gateway and one that doesn't for testing purposes. Notice that the default protocol is SSL and that is what is recommended for production usage. 
+Or you could set one up to connect to your SSL gateway and one that doesn't for testing purposes. Notice that the default protocol is SSL and that is what is recommended for production usage.
 
-However, you will now need to set the new parameters of your new service. These will persist with the new service profile. 
+However, you will now need to set the new parameters of your new service. These will persist with the new service profile.
 
-`> n2 service set <paramenter> <value>` 
+`> n2 service set <paramenter> <value>`
 
-The parameters are host, protocol, http_port and log_levels. These are kept with the service profile. 
+The parameters are host, protocol, http_port and log_levels. These are kept with the service profile.
 
 ## principal
 
-The principal command is a way to create and manage principals from your command line. This is aliased to device and to user at the moment. There is a possibility that these will be extended in the future to have more functionality but at the moment it's simply an easier way to keep track of the current task. 
+The principal command is a way to create and manage principals from your command line. This is aliased to device and to user at the moment. There is a possibility that these will be extended in the future to have more functionality but at the moment it's simply an easier way to keep track of the current task.
 
 `> n2 principal create`
 `> n2 user create`
-`> n2 device create` 
+`> n2 device create`
 
-are all functionally equivilant. 
+are all functionally equivilant.
 
-The create command has additional parameters that you can pass in as well. 
+The create command has additional parameters that you can pass in as well.
 
 `> n2 user create --email a@b.com --name someone --password 12345678`
 
-This creates a user for you. You can pass in the tags, email, name, password and type (default:user) or you can simply use the create and it will give you a wizard which asks you for those properties and creates the user. 
+This creates a user for you and logs in the command line tool as that. You can pass in the tags, email, name, password and type (default:user) or you can simply use the create and it will give you a wizard which asks you for those properties and creates the user.
 
 `> n2 principal claim <code>`
 
-In addition to creating a new principal, you can claim a pre-provisioned code. 
+In addition to creating a new principal, you can claim a pre-provisioned code.
 
 `> n2 principal ls`
 
-Lists all of the principals that your user is allowed to see. 
+Lists all of the principals that your user is allowed to see.
 
 `> n2 principal accesstoken <principalId>`
 
-Create an access token for this principal which is used to give other principals permissions. The is an optional parameter --expires: which expires the token. 
+Create an access token for this principal which is used to give other principals permissions. The is an optional parameter --expires: which expires the token.
 
 `> n2 principal login <email>`
 
-Specifically for user principals to login with an email address for service interactions. 
+Specifically for user principals to login with an email address for service interactions.
 
 `> n2 principal logout`
 
-Logout the current user principal. 
+Logout the current user principal.
 
 `> n2 principal ls`
 
-This lists the principals that the current user has permissions to see. You can filter that with --filter, limit the number with --limit which is useful with the --skip so that you can list them 10 at a time. And lastly you can sort them with --sort + a field name to sort on. 
+This lists the principals that the current user has permissions to see. You can filter that with --filter, limit the number with --limit which is useful with the --skip so that you can list them 10 at a time. And lastly you can sort them with --sort + a field name to sort on.
 For example:
 
 `> n2 principal ls --limit 10 --sort name`
 
-This will give you the first 10 principals, sorted by name, that the current user is allowed to see. 
+This will give you the first 10 principals, sorted by name, that the current user is allowed to see.
 
 ## apikeys
 
-To provision a new device, it needs to pass in the principal user's apikey. This can be found in the admin panel or with the n2 apikey command. 
+To provision a new device, it needs to pass in the principal user's apikey. This can be found in the admin panel or with the n2 apikey command.
 
 `> n2 apikeys ls`
 
-The apikeys command only takes one argument at this time which is the ls command. This lists the apikey(s) that are associated with the current user. 
+The apikeys command only takes one argument at this time which is the ls command. This lists the apikey(s) that are associated with the current user.
 
-## permission 
+## permission
 
-The principal model is based on permissions. A principal is only able to act on other principals based on permissions. 
+The principal model is based on permissions. A principal is only able to act on other principals based on permissions.
 
 `> n2 permission add`
 
-This takes parameters --action, --issuedTo and principalFor which all default to all as well as --priority and --authorized. The priority this principal has in relation to other permissions.  Permissions are walked in priority order and the first match is used to determine if the action is authorized. Authorized is either true or false. 
+This takes parameters --action, --issuedTo and principalFor which all default to all as well as --priority and --authorized. The priority this principal has in relation to other permissions.  Permissions are walked in priority order and the first match is used to determine if the action is authorized. Authorized is either true or false.
 
 ## message
 
-This is a critical command for debugging and understanding services. It's also useful for scripting actions from the command line. 
+This is a critical command for debugging and understanding services. It's also useful for scripting actions from the command line.
 
 `> n2 message ls`
 
@@ -138,27 +148,27 @@ This shows a list of the messages that your principal has access to see in the l
 
 ```
 Side note, on Windows you need to:
-- use double quotes on the outside 
-- escape the quotes on the inside 
+- use double quotes on the outside
+- escape the quotes on the inside
 as follows:
 
 > n2 message ls --filter "{\"type\": \"heartbeat\"}"
 ```
 
-This will filter the list to the messages that match the filter. 
+This will filter the list to the messages that match the filter.
 
-The other thing that the message comamnd can do is send a message. This takes a none-optional json object that is the message to send from your principal. 
+The other thing that the message comamnd can do is send a message. This takes a non-optional json object that is the message to send from your principal.
 
-If there is a custom message, put an '_' in front of the message type as follows:
+If you are using a custom schema, put an '_' in front of the message type as follows:
 
 `> n2 message send '{"type": "_custom", "tags":["command:<deviceid>"], `
 `"body": {"var1": "value 1", "var2": "value2"}, "from":"<principalId>", "to":"<deviceId>"}'`
 
-The from and to parts are optional if it's a message for the log but at present there is not a broadcast message so if you want the message to reach a device, you have to specifically address it to that device. 
+The from and to parts are optional if it's a message for the log but at present there is not a broadcast message so if you want the message to reach a device, you have to specifically address it to that device.
 
 ## app
 
-The app command is used for managing app installation and execution. Aliased to reactor as well. 
+The app command is used for managing app installation and execution. Aliased to reactor as well.
 
-Operations are install, start, stop and uninstall. 
+Operations are install, start, stop and uninstall.
 
