Spell check the n2 documentation

--- a/source/docs/tools/n2.md
+++ b/source/docs/tools/n2.md
@@ -4,11 +4,11 @@ title: Command Line Interface
 
 # Command Line Interface (n2)
 
-n2 is the command line tool that can be used to do command line administration of a Nitrogen service. It can be used to create new users, provision devices, connect to a new service and is extremely useful in sending/recieving test messages.
+n2 is the command line tool that can be used to do command line administration of a Nitrogen service. It can be used to create new users, provision devices, connect to a new service and is extremely useful in sending/receiving test messages.
 
-The n2 tool takes a command and then an arguement or series of arguments.
+The n2 tool takes a command and then an argument or series of arguments.
 
-You can accomplish many of these tasks from the web site as well if you login to the admin portal but many times it's more convinient to do them from the command line and/or script them.
+You can accomplish many of these tasks from the web site as well if you login to the admin portal but many times it's more convenient to do them from the command line and/or script them.
 
 ## Installation
 
@@ -71,7 +71,7 @@ Or you could set one up to connect to your SSL gateway and one that doesn't for 
 
 However, you will now need to set the new parameters of your new service. These will persist with the new service profile.
 
-`> n2 service set <paramenter> <value>`
+`> n2 service set <parameter> <value>`
 
 The parameters are host, protocol, http_port and log_levels. These are kept with the service profile.
 
@@ -157,7 +157,7 @@ as follows:
 
 This will filter the list to the messages that match the filter.
 
-The other thing that the message comamnd can do is send a message. This takes a non-optional json object that is the message to send from your principal.
+The other thing that the message command can do is send a message. This takes a non-optional json object that is the message to send from your principal.
 
 If you are using a custom schema, put an '_' in front of the message type as follows:
 
